--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@model Treehouse.FitnessFrog.Models.Entry
+﻿@using Treehouse.FitnessFrog.Models
+@model Treehouse.FitnessFrog.Models.Entry
 
 @{
     ViewBag.Title = "Add Entry";
@@ -19,7 +20,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
-                @Html.DropDownListFor(m => m.ActivityId, (SelectList)ViewBag.ActivitiesSelectListItems,"", new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.ActivityId, (SelectList)ViewBag.ActivitiesSelectListItems, "", new { @class = "form-control" })
             </div>
 
             <div class="form-group">
@@ -29,7 +30,15 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Intensity, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Intensity, new { @class = "form-control" })
+                <div>
+                    @foreach (var value in Enum.GetValues(typeof(Entry.IntensityLevel)))
+                    {
+                        <label class="radio-inline">
+                            @Html.RadioButtonFor(m => m.Intensity, value) @value
+                        </label>
+                    }
+                </div>
+               
             </div>
 
             <div class="form-group">
