--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -12,10 +12,9 @@
     <div class="row">
 
         <div class="col-md-6">
-
             <div class="form-group">
                 @Html.LabelFor(m => m.Date, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Date, "{0:d}", new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.Date, "{0:yyyy/MM/dd}", new { @class = "form-control datepicker" })
             </div>
 
             <div class="form-group">
