--- a/src/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
@@ -1,10 +1,10 @@
-﻿@{ 
+﻿@{
     var applicationName = "Fitness Frog";
 }
 
 @helper GetAddEntryButtonVisibility()
 {
-    if ((string)ViewContext.RouteData.Values["controller"] == "Entries" && 
+    if ((string)ViewContext.RouteData.Values["controller"] == "Entries" &&
         (string)ViewContext.RouteData.Values["action"] == "Add")
     {
         <text>hidden</text>
@@ -24,6 +24,7 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="~/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Secular+One" rel="stylesheet">
+    @*<link href="~/Content/bootstrap-datepicker3.min.css" rel="stylesheet" />*@
     <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
@@ -62,5 +63,12 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+<script src="~/Scripts/bootstrap-datepicker.min.js"></script>
+<script>
+    $('.datepicker').datepicker({
+        format: 'yyyy/mm/dd'
+    });
+</script>
+
 </body>
 </html>
